fix: :bug: header added to the nux with functioanlity

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,9 +1,47 @@
+@font-face {
+  font-family: "roslindale";
+  src: url("../fonts/Roslindale/Roslindale_Desktop/Roslindale-DeckNarrowBold-Testing.otf")
+    format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "mint";
+  src: url("../fonts/mint-grotesk-font-family-1721994350-0/MintGroteskTrial-RegularDisplay-BF64336b1cd46bb.otf")
+    format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* Smooth Scrolling (Lenis) */
+html.lenis,
+html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
+
+/* Disable Scroll Behavior
 html,
 body {
   overflow: hidden;
   scroll-behavior: none;
-}
+} */
